# w2dynamics-patched

./: .gitignore  .gitlab-ci.yml  .pylintrc  DMFT.py  README.md
complex_wterm/: CMakeLists.txt  Maxent.py  PylintCI.txt  README.md  cthyb
complex_wterm/benchmark/1Band-legendre_paper/: fig1_inset.gnu  fig3_mail.gnu  fig4_inset.gnu
complex_wterm/benchmark/1BandBethe-out-of-half-fill/: Info.txt  check_ReSigma.gnu  iterations.c
complex_wterm/benchmark/1BandBethe-out-of-half-fill/CTINT/: G_iom_qmc  Sigma_iom_qmc  g_iom_0_up  grtot_iom
complex_wterm/benchmark/EDcheck_half-fill_insulating/: Vk  epsk
complex_wterm/benchmark/EDcheck_half-fill_insulating/beta_50/: anzahl  fort.62  g0m  g0mand  gm_wre  init.h  vsmu
complex_wterm/benchmark/dmft_worm/: hubbard_2d_48_48_1.hk
complex_wterm/benchmark/ed-giorgio/: epsk
complex_wterm/benchmark/ed-markus/: epsk
complex_wterm/benchmark/ed-massimo/: Parameters.in  Vk  check_2Band_massimo_Band2.gnu  epsk
complex_wterm/benchmark/ed-twopart/: compare_siw.gnu  gm_wre
complex_wterm/benchmark/g4iw_worm/: Parameters.in
complex_wterm/benchmark/mod_worm/3/: Parameters_qq  combine_qq.ipynb  epsk  qq_raw.ipynb
complex_wterm/benchmark/mod_worm/4/: Parameters_g
complex_wterm/benchmark/offdiagonal_benchmarks/2orbital_density/: Parameters.in
complex_wterm/benchmark/srvo3/: hclm_script.sh
complex_wterm/cmake/Modules/: FindNUMPY.cmake  PythonPolyfill.cmake
complex_wterm/contrib/postproc/: copy-data.py  deltaN.py  make_vertex_files.py  sample.py  sigmaw.py  siw_smooth.py  taylorfit_selfenergy.py
complex_wterm/contrib/preproc/: cfg_converter.py  permute_bands.py
complex_wterm/doc/: installation.md  latexstyle.sty
complex_wterm/doc/examples/: twoorbital.md
complex_wterm/notebooks/: ed.ipynb
complex_wterm/singularity/: w2dynamics_debian11.def  w2dynamics_ubuntu2204.def
complex_wterm/src/ctqmc_fortran/: Accumulator.tmpl.F90  AccumulatorBase.F90  Bath.F90  Bath.tmpl.F90  BathBase.F90  BathMeasurements.F90  CTQMC.F90  Diagram.F90  DiagramMoves.F90  ExtRange.tmpl.F90  Impurity.F90  Impurity.tmpl.F90  LocalBase.F90  LocalMeasurements.F90  Operator.tmpl.F90  Parameters.F90  Psi.F90  QRDecomposition.tmpl.F90  SamplerRegister.F90  Signals.F90  Sorting.tmpl.F90  States.F90  WormMeas.F90  WormState.F90
complex_wterm/src/ctqmc_fortran/c-interface/: README.txt
complex_wterm/src/ctqmc_fortran/double/: Accumulator.F90  Bath.F90  Buffer.F90  Impurity.F90  Operator.F90  README.txt  UpdatableMatrix.F90
complex_wterm/src/ctqmc_fortran/integer/: Buffer.F90
complex_wterm/src/ctqmc_fortran/libraries/: LAPACK.F90  LibC.F90
complex_wterm/src/ctqmc_fortran/zcomplex/: Bath.F90  BlockMatrix.F90  Buffer.F90  ExtRange.F90  Impurity.F90  Sampler.F90
complex_wterm/testsuite/ctqmc.tests/: 1-rng-basic-call.F90  1-testing.F90  11-wormstate-hybop-operations.F90  12-binarysearch-taupos.F90  15-local-cycle.F90  16-braket.F90  17-accumulators.F90  18-impurity.F90  19-bathglobal-vs-bathadd4.F90  2-prng.F90  20-bathglobal-vs-bathrem4.F90  21-sampler.F90  22-complex-hyb-bug.F90  24-hybridization.F90  28-blockmatrix.F90  31-ed-check.F90  32-multiorb.F90  6-bathglobal-vs-bathadd.F90  7-bathglobal-vs-bathrem.F90  8-bathglobal-vs-bathshift.F90  8.5-bathglobal-vs-bathreplace.F90
complex_wterm/testsuite/w2dyn.tests/: CMakeLists.txt  regressiontest.py  remove_environment_from_hdf5.py
complex_wterm/testsuite/w2dyn.tests/1orb_bethe_dmft/: Parameters.in
complex_wterm/testsuite/w2dyn.tests/2orb_bws2.0_4.0_lvls0.0_kanU8.0_J2.0_mu7.0/: Parameters.in
complex_wterm/testsuite/w2dyn.tests/3orb_bws2.5_3.0_3.5_lvls1.0_0.5_0.0_kanU1.6_J0.4_mu5.00/: Vk  epsk
complex_wterm/testsuite/w2dyn.tests/bsp_444/: Parameters.in  edcheck.in  vk
complex_wterm/testsuite/w2dyn.tests/bsp_444___compl_vk___hopping_compl/: e0  edcheck.in
complex_wterm/testsuite/w2dyn.tests/strontium_iridate/: Parameters.in
complex_wterm/w2dyn/auxiliaries/: __init__.py  bindings.py  input.py  postprocessing.py  quantities.py  transform.py  wien2k.py
complex_wterm/w2dyn/dmft/: _compat.py  atoms.py  doublecounting.py  edipack_solver.py  impurity.py  interaction.py  mixing.py  mpi.py  orbspin.py
documentation/: debugging.dox
phonons_real/: CMakeLists.txt  README.md  (+2 more)
wterm_complex/src/ctqmc_fortran/: Accumulator.F90  Bath.F90  Bath.tmpl.F90  BlockMatrix.tmpl.F90  Buffer.tmpl.F90  CMakeLists.txt  CTQMC.F90  Common.F90  ComplexNumbers.F90  CompoundIndex.F90  Diagram.F90  DiagramMeasurements.F90  DiagramMoves.F90  ExtRange.F90  Hybridization.tmpl.F90  Impurity.F90  Impurity.tmpl.F90  LogDiscretization.F90  Makefile  MeasurementInterface.F90  MoveStatistics.F90  Operator.F90  Permutation.F90  Printing.F90  Progress.F90  Psi.tmpl.F90  RandomNumbers.F90  Sampler.tmpl.F90  Sorting.F90  SymmetryMoves.F90  Testing.F90  UpdatableMatrix.tmpl.F90  Utilities.F90  Window.F90
wterm_complex/src/ctqmc_fortran/c-interface/: Accumulator.F90  Sampler.F90
wterm_complex/src/ctqmc_fortran/double/: Bath.F90  BlockMatrix.F90  ExtRange.F90  Hybridization.F90  Impurity.F90  Psi.F90  QRDecomposition.F90  Sampler.F90  Sorting.F90
wterm_complex/src/ctqmc_fortran/integer/: Sorting.F90
wterm_complex/src/ctqmc_fortran/libraries/: BLAS.F90  FFTW.F90
wterm_complex/src/ctqmc_fortran/zcomplex/: Accumulator.F90  Bath.F90  Hybridization.F90  Impurity.F90  Operator.F90  Psi.F90  QRDecomposition.F90  README.txt  UpdatableMatrix.F90
wterm_complex/src/maxent/: CMakeLists.txt  MaximumEntropy.F90  MersenneTwister.F90
wterm_complex/testsuite/ctqmc.tests/: 15-local-cycle.F90  16-operators.F90  18-impurity.F90  19-bathglobal-vs-bathadd4.F90  2-rng-check.F90  20-bathglobal-vs-bathrem4.F90  22-complex-hyb-bug.F90  23-extrange.F90  25-sparse-index.F90  26-qr-updates.F90  26-updatable-matrix.F90  27-permutation.F90  3-exp-discretization.F90  31-ed-check.F90  32-multiorb.F90  4-init-bath.F90  6-bathglobal-vs-bathadd.F90  7-bathglobal-vs-bathrem.F90  8-bathglobal-vs-bathshift.F90  8.5-bathglobal-vs-bathreplace.F90  CMakeLists.txt  generate_reference_data.py
wterm_complex/testsuite/maxent.tests/: 1-getgridunit.F90  CMakeLists.txt
(+208 files in other folders)
